# bloxburg-roblox-suite

./: .version  CMakeLists.txt  README.md
bloxburg-roblox-suite/: requirements.txt
bloxburg-roblox-suite/src/: __init__.py  bloxburg_automation.py  job_manager.py
bloxburg-roblox-suite/tests/: test_bloxburg_suite.py
src/: main.cpp
src/game/: Automation.cpp  Automation.h  Player.cpp  Player.h
tests/: test_player.cpp
